[package]
name = "terminal-adapter"
version = "0.1.0"
authors = ["Timon Post"]
edition = "2018"
repository = "https://github.com/crossterm-rs/terminal-adapter"
documentation = "https://docs.rs/terminal-adapter/"
license = "MIT"
keywords = ["console", "cli", "tty", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]

[features]
termion-backend = ["termion", "signal-hook", "libc", "crossbeam-channel"]
crossterm-backend = ["crossterm"]

[dependencies.termion]
optional = true
version = "1.5.3"

[dependencies.crossterm]
optional = true
version = "0.14"

[dependencies]
bitflags = "1.2.1"
lazy_static = "1.4.0"

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.1.8", optional = true }
libc = { version = "0.2.51", optional = true }
crossbeam-channel = { version = "0.4.0", optional = true }