[package]
name = "terminal"
version = "0.4.0"
authors = ["Timon Post"]
edition = "2018"
repository = "https://github.com/crossterm-rs/terminal"
documentation = "https://docs.rs/terminal/"
license = "MIT"
keywords = ["console", "cli", "tty", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]

#
# Build documentation with all features, BackendImpl is availible.
#
[package.metadata.docs.rs]
features = ["crossterm-backend"]

#
# Features
#
[features]
default = ["crossterm-backend"]
termion-backend = ["termion", "signal-hook", "libc", "crossbeam-channel"]
crossterm-backend = ["crossterm"]

#
# Shared dependencies
#
[dependencies]
bitflags = "1.2.1"

#
# Backend dependencies
#
[dependencies.termion]
optional = true
version = "1.5.3"

[dependencies.crossterm]
optional = true
version = "0.14"

#
# UNIX dependencies
#
[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.1.12", optional = true }
libc = { version = "0.2.66", optional = true }
crossbeam-channel = { version = "0.4.0", optional = true }